--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,21 @@ dependencies {
     // https://mvnrepository.com/artifact/org.powermock/powermock-api-easymock
     testCompile group: 'org.powermock', name: 'powermock-api-easymock', version: '2.0.2'
 
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.2'
+
+    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
+
+
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
+    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.26'
+
+
+    // https://mvnrepository.com/artifact/com.udojava/EvalEx
+    compile group: 'com.udojava', name: 'EvalEx', version: '2.1'
+
+    compile fileTree(dir:'lib',includes:['*jar'])
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
